--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,27 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@plugin "daisyui";
+@plugin "daisyui/theme" {
+  name: "light";
+
+  --color-primary: #bf0603;
+  --color-secondary: #52b788;
+
+  --color-base-100: #edf2f4;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@plugin "daisyui/theme" {
+  name: "dark";
+
+  --color-primary: #bf0603;
+  --color-secondary: #52b788;
+
+  --color-base-100: #333333;
+  --color-base-200: #000000;
+  /* --color-base-100: #4a4a4a; */
+  --color-base-content: #ffffff;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.active {
+  @apply underline;
 }
